<?xml version="1.0"?>
<package format="2">
  <name>iidre_uwb_indoor_geoloc</name>
  <version>0.0.0</version>
  <description>Indoor geolocalisation with Ultra wideband (UWB) sensors from IIDRE</description>

  <maintainer email="dev@ros4.pro">Yoan Mollard</maintainer>
  <maintainer email="tech@iidre.com">IIDRE</maintainer>

  <license>CeCILL</license>

  <url type="website">https://www.iidre.com/en</url>
  <url type="repository">https://github.com/aubrune/iidre_uwb_indoor_geoloc</url>
  <url type="repository">https://github.com/IIDRE/uwbSupervisor</url>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
